// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properties/link should match snapshot for link with empty url 1`] = `
<div>
  <div
    class="URLProperty"
  >
    <input
      class="Editable octo-propertyvalue"
      placeholder=""
      style="width: 100%;"
      title=""
      value=""
    />
  </div>
</div>
`;

exports[`properties/link should match snapshot for link with non-empty url 1`] = `
<div>
  <div
    class="URLProperty octo-propertyvalue"
  >
    <a
      class="link"
      href="https://github.com/mattermost/focalboard"
      rel="noreferrer"
      target="_blank"
    >
      https://github.com/mattermost/focalboard
    </a>
    <button
      aria-label="Edit"
      class="IconButton Button_Edit"
      title="Edit"
      type="button"
    >
      <i
        class="CompassIcon icon-pencil-outline EditIcon"
      />
    </button>
    <button
      aria-label="Copy"
      class="IconButton Button_Copy"
      title="Copy"
      type="button"
    >
      <i
        class="CompassIcon icon-content-copy content-copy"
      />
    </button>
  </div>
</div>
`;

exports[`properties/link should match snapshot for readonly link with non-empty url 1`] = `
<div>
  <div
    class="URLProperty octo-propertyvalue octo-propertyvalue--readonly"
  >
    <a
      class="link"
      href="https://github.com/mattermost/focalboard"
      rel="noreferrer"
      target="_blank"
    >
      https://github.com/mattermost/focalboard
    </a>
    <button
      aria-label="Copy"
      class="IconButton Button_Copy"
      title="Copy"
      type="button"
    >
      <i
        class="CompassIcon icon-content-copy content-copy"
      />
    </button>
  </div>
</div>
`;
